<resources>
    <string name="app_name">Electronics</string>
    <string name="login">Login</string>
    <string name="account">Create an account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="reset">Reset Password</string>
    <string name="link">Password Reset Link will be sent to this Email Address</string>
    <string name="have_account">Already Registered Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="update">Update Profile</string>
    <string name="pharm">Add Electronic Shop</string>
    <string name="Shop">Shop Name</string>
    <string name="create">Create</string>
    <string name="pharm_address">Shop Address</string>
    <string name="add_pharm">Add Shop</string>
    <string name="view">View Pharmacies</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Upload Profile Picture</string>
    <string name="up">Update</string>
    <string name="del">Delete</string>
    <string name="update_pharm">Update Shop</string>
    <string name="edit">Update Shop</string>
    <string name="drug">Product Name</string>
    <string name="drug_image">Product Image</string>
    <string name="drug_description">Product Description</string>
    <string name="price">Price</string>
    <string name="add_drug">Add Product</string>
    <string name="upload">Upload</string>
    <string name="Uploaded">Your Uploaded Products</string>
    <string name="update_drug">Update Your Product Here</string>
    <string name="edit_drug">Edit Product</string>
    <string name="pharmacies">Available Electronic Shops</string>
    <string name="products">See Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_shopping_cart">Your Shopping Cart</string>
    <string name="registered_electronic_shops">Registered Electronic Shops</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_shops">View Shops</string>
    <string name="add_shop">Add Shop</string>
</resources>