<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        android:layout_margin="0dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/drug_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/upload"
                android:contentDescription="@string/Shop" />

                <TextView
                    android:id="@+id/drug_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drug"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_description"
                android:textSize="15sp"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_to_cart"
                    android:backgroundTint="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>